<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"

    android:padding="16dp">
    <!-- Character Name -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewCharacterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/character_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Character Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewCharacter"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/char_placeholder"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

    <!-- Other Character Information -->

    <!-- Gender -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gender"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/gender"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Species -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/species"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/species"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/species"
            android:textColor="@color/black" />
    </LinearLayout>
    <!-- Status -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/status"
            android:textColor="@color/black" />
    </LinearLayout>
    <!-- Type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/type"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Created -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/created"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/created"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/created"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- homeland -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeland"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/homeland"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewHomeland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/homeland"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- episode -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/episode"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/episode"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/episode"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/location"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/location"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEpisodesInCharacters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_episode" />
</LinearLayout>